[package]
edition = "2024"
name = "hello-esp"
version = "0.1.0"

[dependencies]
critical-section = "1.2.0"
esp-backtrace = { version = "0.18.0", features = [
  "esp32c3",
  "panic-handler",
  "println",
] }
esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32c3"] }
esp-hal = { version = "1.0.0", features = ["esp32c3", "log-04"] }
esp-println = { version = "0.16.0", features = ["esp32c3", "log-04"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
