[package]
edition = "2024"
name = "hello-esp"
version = "0.1.0"

[dependencies]
critical-section = "1.2.0"
defmt = "1"
esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32c3"] }
esp-hal = { version = "1.0.0", features = ["defmt", "esp32c3", "unstable"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
